deploy/infrastructure/homer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  labels:
    app: homer
spec:
  type: ClusterIP
  selector:
    app: homer
  ports:
    - name: http-homer
      protocol: TCP
      port: 80
      targetPort: 8080
